name:                   pico-prolog
version:                1
synopsis:               Toy Prolog Implementation
description:            A toy Prolog implementation I wrote to learn how the language works.
homepage:               https://github.com/peti/pico-prolog
bug-reports:            https://github.com/peti/pico-prolog/issues
license:                BSD2
license-file:           LICENSE
author:                 Peter Simons
maintainer:             simons@cryp.to
category:               Language
build-type:             Simple
cabal-version:          >=1.10
tested-with:            GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.2

source-repository head
  type:                 git
  location:             https://github.com/peti/pico-prolog.git

executable pico-prolog
  main-is:              prolog.hs
  default-language:     Haskell2010
  build-depends:        base < 5
                      , Cabal
                      , containers
                      , lens
                      , pretty
  if (impl(ghc < 8))
    build-depends:      semigroups
